--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "express-fileupload": "^1.2.1",
+    "fs-extra": "^9.1.0"
   }
 }
