--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "express-fileupload": "^1.2.1",
+    "fs-extra": "^9.1.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.6",
-    "nodemon": "^2.0.7"
-  },
-  "dependencies": {
-    "express-fileupload": "^1.2.1",
-    "fs-extra": "^9.1.0"
+    
   }
 }
